[package]
name = "hypercube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.4" } #, features = ["bytemuck"]
ndarray = "0.15.6"
# bytemuck = { version = "1.12.3", features = ["derive", "min_const_generics"] }
# num = "0.4.0"
# simba = "0.7.3"
# thiserror = "1.0.38"
